# fastapi-course

./: .gitignore  README.md  pyproject.toml  run.py
alembic/: env.py
alembic/versions/2026/03/: 10_2352_33_9ae91a3b1877_create_hotels_table.py
app/: config.py  database.py  main.py
app/bookings/: router.py  schemas.py
app/config/: app.py  database.py  settings.py
app/config/envs/: .env.example
app/database/: annotations.py  engine.py
app/hotels/: models.py  router.py  schemas.py
