[project]
name = "fastapi-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Shamil Lachenilaev",email = "lachen1305@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
